Make PHP code completion react to textChanged() instead of cursorPositionChanged(), this to avoid trapping the cursor keys when simply navigating the code. Also added CTRL+SPACE shortcut to manually call up the completion dialog.

BUG: 95696